--- a/doc/reference.adoc
+++ b/doc/reference.adoc
@@ -2,26 +2,26 @@
 
 === Data type conversion
 
-When reading data from a data source, Metadb will automatically adjust column
-data types in a number of cases:
+When reading data from a data source, Metadb will automatically adjust
+column data types in a number of cases:
 
-* A data type in the source has changed in a way that cannot be applied safely
-  by Metadb without more information.
+* A data type in the source has changed in a way that cannot be
+  applied safely by Metadb without more information.
 
-* A data type in the source has changed to a type that is not supported by
-  Metadb.
+* A data type in the source has changed to a type that is not
+  supported by Metadb.
 
-* A data type in the source can be converted safely to a type that is more
-  performant.
+* A data type in the source can be converted safely to a type that is
+  more performant.
 
-Each type conversion is applied in one of two ways: either by the stream
-processor converting a record-at-a-time, or later by "inferring" types from
-previously updated data.
+Each type conversion is applied in one of two ways: either by the
+stream processor converting a record-at-a-time, or later by
+"inferring" types from previously updated data.
 
 ==== Record-at-a-time
 
-This table summarizes conversions that are performed a record-at-a-time by the
-stream processor:
+This table summarizes conversions that are performed a
+record-at-a-time by the stream processor:
 
 [width=80%]
 [%header,cols="2,^1,^1,^1,^1"]
@@ -161,7 +161,8 @@ Types also can be set manually via the `ALTER TABLE` command.
     error_severity text,
     message text
 )
-|Returns recent log messages during the specified interval, or during the past 24 hours if no interval is given
+|Returns recent log messages during the specified interval, or during
+ the past 24 hours if no interval is given
 
 |`mdbversion()`
 |text
@@ -175,7 +176,8 @@ Types also can be set manually via the `ALTER TABLE` command.
     realtime text,
     query text
 )
-|Returns the status and elapsed running time of current query processes
+|Returns the status and elapsed running time of current query
+ processes
 |===
 
 [discrete]
@@ -250,7 +252,8 @@ The table `metadb.log` stores logging information for the system.
 
 |error_severity
 |text
-|Logging level: (from least to most severe) INFO, WARNING, ERROR, FATAL
+|Logging level: (from least to most severe) INFO, WARNING, ERROR,
+ FATAL
 
 |message
 |text
@@ -259,8 +262,8 @@ The table `metadb.log` stores logging information for the system.
 
 ==== metadb.table_update
 
-The table `metadb.table_update` stores information about the updating of
-certain tables.
+The table `metadb.table_update` stores information about the updating
+of certain tables.
 
 [%header,cols="1,1l,3"]
 |===
@@ -287,20 +290,20 @@ certain tables.
 
 === External SQL directives
 
-Metadb allows scheduling external SQL files to run on a regular basis.  At
-present this feature is enabled automatically when the "folio" or "reshare"
-module has been specified in the data source.  Details such as the location of
-the SQL files and when they are run are currently hardcoded but will be
-configurable in the future.
+Metadb allows scheduling external SQL files to run on a regular basis.
+At present this feature is enabled automatically when the "folio" or
+"reshare" module has been specified in the data source.  Details such
+as the location of the SQL files and when they are run are currently
+hardcoded but will be configurable in the future.
 
-Each SQL statement should be separated from others by an empty line, and any
-tables created should not specify a schema name.
+Each SQL statement should be separated from others by an empty line,
+and any tables created should not specify a schema name.
 
-Comment lines beginning with `--metadb:` are used for special directives; each
-directive should be on a separate line.
+Comment lines beginning with `--metadb:` are used for special
+directives; each directive should be on a separate line.
 
-It is suggested that each SQL file begin with a `--metadb:table` directive,
-followed by an empty line, for example:
+It is suggested that each SQL file begin with a `--metadb:table`
+directive, followed by an empty line, for example:
 
 ----
 --metadb:table library_patrons
@@ -313,9 +316,10 @@ SELECT . . . ;
 
 ==== --metadb:table
 
-The `--metadb:table` directive declares that the SQL file updates a specific
-table.  This allows Metadb to report on the status of the update in the
-`metadb.table_update` system table.  The directive takes the form:
+The `--metadb:table` directive declares that the SQL file updates a
+specific table.  This allows Metadb to report on the status of the
+update in the `metadb.table_update` system table.  The directive takes
+the form:
 
 ----
 --metadb:table <table>
@@ -331,9 +335,10 @@ For example:
 
 === Statements
 
-Metadb extends SQL with statements for configuring and administering the
-server.  These statements are only available when connecting to the Metadb
-server (not the PostgreSQL server for the underlying database).
+Metadb extends SQL with statements for configuring and administering
+the server.  These statements are only available when connecting to
+the Metadb server (not the PostgreSQL server for the underlying
+database).
 
 ==== ALTER DATA SOURCE
 
@@ -366,7 +371,8 @@ will take effect.
 |The name of an existing data source.
 
 |`OPTIONS ( [ ADD \| SET \| DROP ] *_option_* ['*_value_*'] [, ... ] )`
-|Connection settings and other configuration options for the data source.
+|Connection settings and other configuration options for the data
+ source.
 |===
 
 [discrete]
@@ -396,8 +402,8 @@ ALTER TABLE `*_table_name_*`
 [discrete]
 ===== Description
 
-ALTER TABLE changes the definition of a table that is extracted from a data
-source.
+ALTER TABLE changes the definition of a table that is extracted from a
+data source.
 
 [discrete]
 ===== Parameters
@@ -411,7 +417,8 @@ source.
 |Name of a column to alter.
 
 |`*_data_type_*`
-|The new data type of the column.  The only type currently supported is `uuid`.
+|The new data type of the column.  The only type currently supported
+ is `uuid`.
 |===
 
 [discrete]
@@ -437,9 +444,9 @@ AUTHORIZE SELECT
 [discrete]
 ===== Description
 
-The AUTHORIZE command grants access to tables.  It differs from GRANT in that
-the authorization will also apply to tables created at a later time in the data
-source.
+The AUTHORIZE command grants access to tables.  It differs from GRANT
+in that the authorization will also apply to tables created at a later
+time in the data source.
 
 .Note
 ****
@@ -469,7 +476,6 @@ AUTHORIZE SELECT
     TO beatrice;
 ----
 
-
 ==== CREATE DATA MAPPING
 
 [.aqua-background]#Metadb 1.4#
@@ -485,23 +491,24 @@ CREATE DATA MAPPING FOR *_mapping_type_*
 [discrete]
 ===== Description
 
-CREATE DATA MAPPING defines mapping rules for data transformation.  The output
-of a mapping is written to a new column or table based on the specified target
-identifier.
+CREATE DATA MAPPING defines mapping rules for data transformation.
+The output of a mapping is written to a new column or table based on
+the specified target identifier.
 
-In JSON mapping, the specified path identifies a JSON object or array to
-transform.  For example, the path `'$.a.b'` is used to refer to an object or
-array named `b` contained within an object or array named `a`.  The path `'$'`
-means the outermost enclosing object.  Note that an object or array will not be
-transformed unless all of its parents are also transformed; for example, a
-mapping from path `'$.a.b'` will be applied only if mappings are also defined
-for both the paths `'$.a'` and `'$'` within the same table and column.
+In JSON mapping, the specified path identifies a JSON object or array
+to transform.  For example, the path `'$.a.b'` is used to refer to an
+object or array named `b` contained within an object or array named
+`a`.  The path `'$'` means the outermost enclosing object.  Note that
+an object or array will not be transformed unless all of its parents
+are also transformed; for example, a mapping from path `'$.a.b'` will
+be applied only if mappings are also defined for both the paths
+`'$.a'` and `'$'` within the same table and column.
 
 .Note
 ****
 [.text-center]
-CREATE DATA MAPPING currently requires restarting the server before it will
-take effect.
+CREATE DATA MAPPING currently requires restarting the server before it
+will take effect.
 ****
 
 [discrete]
@@ -510,7 +517,8 @@ take effect.
 [frame=none,grid=none,cols="1,2"]
 |===
 |`*_mapping_type_*`
-|The type of data mapping.  The only type currently supported is `json`.
+|The type of data mapping.  The only type currently supported is
+ `json`.
 
 |`*_table_name_*`
 |The table to transform.
@@ -522,16 +530,16 @@ take effect.
 |Path to a JSON object or array.
 
 |`'*_target_identifier_*'`
-|A short identifier to be used in naming the transformed data.  It must be
- unique for the transformed column; in other words, no two paths can be mapped
- to the same target identifier.
+|A short identifier to be used in naming the transformed data.  It
+ must be unique for the transformed column; in other words, no two
+ paths can be mapped to the same target identifier.
 |===
 
 [discrete]
 ===== Examples
 
-Create JSON mappings to transform a "metadata" object and an "identifiers"
-array:
+Create JSON mappings to transform an object at `$.metadata` and an
+array at `$.tags.tagList`:
 
 ----
 CREATE DATA MAPPING FOR json
@@ -543,15 +551,9 @@ CREATE DATA MAPPING FOR json
     TO 'metadata';
 
 CREATE DATA MAPPING FOR json
-    FROM TABLE library.inventory__ COLUMN jsonb PATH '$.identifiers'
-    TO 'identifier';
+    FROM TABLE library.inventory__ COLUMN jsonb PATH '$.tags.tagList'
+    TO 'taglist';
 ----
-
-When the JSON data are next updated, this will produce a table
-`inventory\__t__` which includes the "metadata" object columns, using
-`metadata` as a prefix in column names, and another table
-`inventory\__identifier__` which contains the "identifiers" array data.
-
 
 ==== CREATE DATA ORIGIN
 
@@ -565,18 +567,19 @@ CREATE DATA ORIGIN `*_origin_name_*`
 [discrete]
 ===== Description
 
-CREATE DATA ORIGIN defines a new origin.  An origin name can be stored by
-Metadb in the `__origin` column to tag individual records.  The use and meaning
-of origins are typically defined by the application or by a Metadb module, but
-in general origins allow grouping data independently of data sources.  This can
-be useful because data sources may be dictated by how the data are collected,
+CREATE DATA ORIGIN defines a new origin.  An origin name can be stored
+by Metadb in the `__origin` column to tag individual records.  The use
+and meaning of origins are typically defined by the application or by
+a Metadb module, but in general origins allow grouping data
+independently of data sources.  This can be useful because data
+sources may be dictated by how the data are collected,
 e.g. geographically in a sensor network.
 
 .Note
 ****
 [.text-center]
-CREATE DATA ORIGIN currently requires restarting the server before it will take
-effect.
+CREATE DATA ORIGIN currently requires restarting the server before it
+will take effect.
 ****
 
 [discrete]
@@ -597,7 +600,6 @@ Create a new origin `test_origin`:
 CREATE DATA ORIGIN test_origin;
 ----
 
-
 ==== CREATE DATA SOURCE
 
 Define a new external data source
@@ -611,16 +613,17 @@ CREATE DATA SOURCE `*_source_name_*` TYPE *_source_type_*
 [discrete]
 ===== Description
 
-CREATE DATA SOURCE defines connection settings for an external data source.
+CREATE DATA SOURCE defines connection settings for an external data
+source.
 
-The new data source starts out in synchronizing mode, which pauses periodic
-transforms and running external SQL.  After no new snapshot records have been
-received for a significant period of time, which suggests that the initial
-snapshot has likely finished streaming, the message "source snapshot complete
-(deadline exceeded)" will be written to the log.  To complete the
-synchronization, the Metadb server should be stopped in order to run `metadb
-endsync`, and after the "endsync" has completed, the Metadb server can be
-started again.
+The new data source starts out in synchronizing mode, which pauses
+periodic transforms and running external SQL.  After no new snapshot
+records have been received for a significant period of time, which
+suggests that the initial snapshot has likely finished streaming, the
+message "source snapshot complete (deadline exceeded)" will be written
+to the log.  To complete the synchronization, the Metadb server should
+be stopped in order to run `metadb endsync`, and after the "endsync"
+has completed, the Metadb server can be started again.
 
 [discrete]
 ===== Parameters
@@ -631,10 +634,12 @@ started again.
 |A unique name for the data source to be created.
 
 |`*_source_type_*`
-|The type of data source.  The only type currently supported is `kafka`.
+|The type of data source.  The only type currently supported is
+ `kafka`.
 
 |`OPTIONS ( *_option_* '*_value_*' [, ... ] )`
-|Connection settings and other configuration options for the data source.
+|Connection settings and other configuration options for the data
+ source.
 |===
 
 [discrete]
@@ -649,19 +654,23 @@ started again.
 |Security protocol: `'ssl'` or `'plaintext'`.  The default is `'ssl'`.
 
 |`topics`
-|Regular expressions matching Kafka topics to read (comma-separated list).
+|Regular expressions matching Kafka topics to read (comma-separated
+ list).
 
 |`consumergroup`
 |Kafka consumer group ID.
 
 |`schemapassfilter`
-|Regular expressions matching schema names to accept (comma-separated list).
+|Regular expressions matching schema names to accept (comma-separated
+ list).
 
 |`schemastopfilter`
-|Regular expressions matching schema names to ignore (comma-separated list).
+|Regular expressions matching schema names to ignore (comma-separated
+ list).
 
 |`tablestopfilter`
-|Regular expressions matching table names to ignore (comma-separated list).
+|Regular expressions matching table names to ignore (comma-separated
+ list).
 
 |`trimschemaprefix`
 |Prefix to remove from schema names.
@@ -700,11 +709,10 @@ CREATE USER `*_user_name_*` WITH *_option_* '*_value_*' [, ... ]
 [discrete]
 ===== Description
 
-CREATE USER defines a new database user that will be managed by Metadb.  It
-also creates a schema having the same name as the user, if the schema does not
-exist, and grants the user privileges on the schema.  The schema is intended as
-a workspace for the user.
-
+CREATE USER defines a new database user that will be managed by
+Metadb.  It also creates a schema having the same name as the user, if
+the schema does not exist, and grants the user privileges on the
+schema.  The schema is intended as a workspace for the user.
 
 [discrete]
 ===== Parameters
@@ -727,7 +735,9 @@ a workspace for the user.
 |Sets the user's password.  (Required)
 
 |`comment`
-|Stores a comment about the user, e.g. the user's real name.  The comment can be viewed in psql using the `\du+` command, or in other user interfaces.
+|Stores a comment about the user, e.g. the user's real name.  The
+ comment can be viewed in psql using the `\du+` command, or in other
+ user interfaces.
 |===
 
 [discrete]
@@ -738,7 +748,6 @@ Create a user `wegg`:
 ----
 CREATE USER wegg WITH PASSWORD 'LZn2DCajcNHpGR3ZXWHD', COMMENT 'Silas Wegg';
 ----
-
 
 ==== DROP DATA SOURCE
 
@@ -784,8 +793,8 @@ LIST `*_name_*`
 [discrete]
 ===== Description
 
-LIST shows the current setting of various system configurations and other
-variables.
+LIST shows the current setting of various system configurations and
+other variables.
 
 [discrete]
 ===== Parameters
