--- a/doc/serveradmin.adoc
+++ b/doc/serveradmin.adoc
@@ -45,11 +45,11 @@
 
 === Building the software
 
-It is suggested that a `metadb` user be created and the server run by that
-user, for example, in `/home/metadb`.
+It is suggested that a `metadb` user be created and the server run by
+that user, for example, in `/home/metadb`.
 
-To build Metadb, first set the `GOPATH` environment variable to specify a path
-that can serve as the build workspace for Go, e.g.:
+To build Metadb, first set the `GOPATH` environment variable to
+specify a path that can serve as the build workspace for Go, e.g.:
 
 [source,bash]
 ----
@@ -72,8 +72,8 @@ Then to build the server:
 ./build.sh
 ----
 
-The `build.sh` script creates a `bin/` subdirectory and builds the `metadb`
-executable there:
+The `build.sh` script creates a `bin/` subdirectory and builds the
+`metadb` executable there:
 
 [source,bash]
 ----
@@ -104,17 +104,17 @@ metadb help <command>
 
 === Server configuration
 
-Metadb makes use of local storage in a *data directory* which is created using
-`metadb` with the `init` command.  In this example we will create the data
-directory as `data/`:
+Metadb makes use of local storage in a *data directory* which is
+created using `metadb` with the `init` command.  In this example we
+will create the data directory as `data/`:
 
 [source,bash]
 ----
 metadb init -D data
 ----
 
-This will also create a file `metadb.conf` in the data directory with the
-following structure:
+This will also create a file `metadb.conf` in the data directory with
+the following structure:
 
 [source,subs="verbatim,quotes"]
 ----
@@ -129,10 +129,11 @@ systemuser_password = _password of systemuser_
 sslmode = _should be set to "require" or stronger option_
 ----
 
-Metadb expects the database name to be `metadb` or to begin with `metadb_`;
-otherwise it logs a warning message.
+Metadb expects the database name to be `metadb` or to begin with
+`metadb_`; otherwise it logs a warning message.
 
-This file should be edited to add database connection parameters, for example:
+This file should be edited to add database connection parameters, for
+example:
 
 [source,subs="verbatim,quotes"]
 ----
@@ -147,30 +148,35 @@ systemuser_password = ZHivGie5juxGJZmTObHU
 sslmode = require
 ----
 
-Metadb will assume that the database, superuser, and systemuser defined here
-already exist; so they should be created before continuing.
+Metadb will assume that the database, superuser, and systemuser
+defined here already exist; so they should be created before
+continuing.
 
 === Backups
 
-*It is essential to make regular backups of Metadb and to test the backups.*
+*It is essential to make regular backups of Metadb and to test the
+ backups.*
 
-In general persistent data are stored in the database, and so the database
-should be backed up often.
+In general persistent data are stored in the database, and so the
+database should be backed up often.
 
-The data directory contains the `metadb.conf` configuration file and is also
-used for temporary storage.  The `metadb.conf` file should be backed up.
+The data directory contains the `metadb.conf` configuration file and
+is also used for temporary storage.  The `metadb.conf` file should be
+backed up.
 
 === Upgrading from a previous version
 
-To upgrade from any previous version of Metadb, stop the server (if running),
-and then run the upgrade process in case changes are required:
+To upgrade from any previous version of Metadb, stop the server (if
+running), and then run the upgrade process in case changes are
+required:
 
 ----
 metadb upgrade -D data
 ----
 
-The upgrade process may, in some instances, take a significant amount of time
-to run.  The database generally remains available to users during this period.
+The upgrade process may, in some instances, take a significant amount
+of time to run.  The database generally remains available to users
+during this period.
 
 If no changes are needed, the process outputs:
 
@@ -187,16 +193,16 @@ To start the server:
 nohup metadb start -D data -l metadb.log &
 ----
 
-The `--memlimit` option can be used to set a soft memory limit (in GiB) if
-needed, for example:
+The `--memlimit` option can be used to set a soft memory limit (in
+GiB) if needed, for example:
 
 [source,bash]
 ----
 nohup metadb start -D data -l metadb.log --memlimit 2 &
 ----
 
-The server listens on port 8550 by default, but this can be set using the
-`--port` option.  The `--debug` option enables verbose logging.
+The server listens on port 8550 by default, but this can be set using
+the `--port` option.  The `--debug` option enables verbose logging.
 
 To stop the server:
 
@@ -205,8 +211,8 @@ To stop the server:
 metadb stop -D data
 ----
 
-Note that stopping or restarting the server may delay scheduled data updates or
-cause them to restart.
+Note that stopping or restarting the server may delay scheduled data
+updates or cause them to restart.
 
 The server can be set up to run with systemd via a file such as
 `/etc/systemd/system/metadb.service`, for example:
@@ -237,8 +243,9 @@ systemctl start metadb
 
 === Connecting to the server
 
-The PostgreSQL terminal-based client, `psql`, is used to connect to a Metadb
-server that runs on the same host and listens on a specified port:
+The PostgreSQL terminal-based client, `psql`, is used to connect to a
+Metadb server that runs on the same host and listens on a specified
+port:
 
 ----
 psql -X -h localhost -d metadb -p <port>
@@ -250,20 +257,22 @@ For example:
 psql -X -h localhost -d metadb -p 8550
 ----
 
-See *Reference > Statements* for commands that can be issued via `psql`.
+See *Reference > Statements* for commands that can be issued via
+`psql`.
 
-Note that the Metadb server is not a database system, but only implements part
-of the PostgreSQL communication protocol sufficient to allow `psql` to be used
-as a client.
+Note that the Metadb server is not a database system, but only
+implements part of the PostgreSQL communication protocol sufficient to
+allow `psql` to be used as a client.
 
 === Configuring a Kafka data source
 
 ==== Overview
 
-Metadb currently supports reading Kafka messages in the format produced by the
-Debezium PostgreSQL connector for Kafka Connect.  Configuration of Kafka, Kafka
-Connect, Debezium, and PostgreSQL logical decoding is beyond the scope of this
-documentation, but a few notes are included here.
+Metadb currently supports reading Kafka messages in the format
+produced by the Debezium PostgreSQL connector for Kafka Connect.
+Configuration of Kafka, Kafka Connect, Debezium, and PostgreSQL
+logical decoding is beyond the scope of this documentation, but a few
+notes are included here.
 
 Data flow in this direction:
 
@@ -275,14 +284,14 @@ Data flow in this direction:
 
 ==== Creating a connector
 
-To allow capturing data changes in the source PostgreSQL database, logical
-decoding has to be enabled, in particular by setting `wal_level = logical` in
-`postgresql.conf` for the source database.
+To allow capturing data changes in the source PostgreSQL database,
+logical decoding has to be enabled, in particular by setting
+`wal_level = logical` in `postgresql.conf` for the source database.
 
 Note that timeout settings in the source database such as
-`idle_in_transaction_session_timeout` can cause the connector to fail, if a
-timeout occurs while the connector is taking an initial snapshot of the
-database.
+`idle_in_transaction_session_timeout` can cause the connector to fail,
+if a timeout occurs while the connector is taking an initial snapshot
+of the database.
 
 Next we create a connector configuration file for Kafka Connect:
 
@@ -309,11 +318,11 @@ Next we create a connector configuration file for Kafka Connect:
 ----
 
 It is recommended to use the connector configuration settings
-`heartbeat.interval.ms` and `heartbeat.action.query` as above to avoid spikes
-in disk space consumption within the source database.  (See the Debezium
-PostgreSQL connector documentation for more details.)  The `schemastopfilter`
-option of the `CREATE DATA SOURCE` command is used to filter out the heartbeat
-table.
+`heartbeat.interval.ms` and `heartbeat.action.query` as above to avoid
+spikes in disk space consumption within the source database.  (See the
+Debezium PostgreSQL connector documentation for more details.)  The
+`schemastopfilter` option of the `CREATE DATA SOURCE` command is used
+to filter out the heartbeat table.
 
 In the source database:
 
@@ -332,34 +341,35 @@ curl -X POST -i -H "Accept: application/json" -H "Content-Type: application/json
      -d @connector.json https://kafka.connect.server/connectors
 ----
 
-Note the `1` included in `name` and `database.server.name` in the connector
-configuration.  This is suggested as a version number, which can be incremented
-if the data stream needs to be resynchronized with a new connector.
+Note the `1` included in `name` and `database.server.name` in the
+connector configuration.  This is suggested as a version number, which
+can be incremented if the data stream needs to be resynchronized with
+a new connector.
 
-Metadb requires all streamed tables to have a primary key defined.  Tables that
-do not meet this requirement should be filtered out in the Debezium PostgreSQL
-connector configuration by setting `schema.exclude.list` or
-`table.exclude.list`.  Otherwise they will generate error messages in the
-Metadb log.
+Metadb requires all streamed tables to have a primary key defined.
+Tables that do not meet this requirement should be filtered out in the
+Debezium PostgreSQL connector configuration by setting
+`schema.exclude.list` or `table.exclude.list`.  Otherwise they will
+generate error messages in the Metadb log.
 
 ==== Monitoring replication
 
-*The replication slot disk usage must be monitored, because under certain error
-conditions it can grow too large and possibly fill up the disk.* To show the
-disk usage (in the source database):
+*The replication slot disk usage must be monitored, because under
+certain error conditions it can grow too large and possibly fill up
+the disk.* To show the disk usage (in the source database):
 
 ----
 select slot_name, pg_size_pretty(pg_wal_lsn_diff(pg_current_wal_lsn(),
     restart_lsn)) as replicationSlotLag, active from pg_replication_slots;
 ----
 
-*It is recommended to allocate plenty of extra disk space in the source
-database.*
+*It is recommended to allocate plenty of extra disk space in the
+source database.*
 
 ==== Creating the data source
 
-In Metadb, a data source is defined using the `CREATE DATA SOURCE` statement,
-for example:
+In Metadb, a data source is defined using the `CREATE DATA SOURCE`
+statement, for example:
 
 ----
 CREATE DATA SOURCE sensor TYPE kafka OPTIONS (
@@ -373,13 +383,14 @@ CREATE DATA SOURCE sensor TYPE kafka OPTIONS (
 
 ==== Initial synchronization
 
-When a new data source is first configured using `CREATE DATA SOURCE`, Metadb
-automatically puts the database into synchronizing mode, just as if `metadb
-sync` had been run (see *Server administration > Resynchronizing a data
-source*).  This has the effect of pausing periodic transforms and external SQL.
-When the initial snapshot has finished streaming, the message "source snapshot
-complete (deadline exceeded)" will be written to the log.  Then, to complete
-this first synchronization, stop the Metadb server, and after that run `metadb
+When a new data source is first configured using `CREATE DATA SOURCE`,
+Metadb automatically puts the database into synchronizing mode, just
+as if `metadb sync` had been run (see *Server administration >
+Resynchronizing a data source*).  This has the effect of pausing
+periodic transforms and external SQL.  When the initial snapshot has
+finished streaming, the message "source snapshot complete (deadline
+exceeded)" will be written to the log.  Then, to complete this first
+synchronization, stop the Metadb server, and after that run `metadb
 endsync`:
 
 [source,bash]
@@ -393,10 +404,10 @@ Once "endsync" has finished running, start the Metadb server.
 
 ==== Deleting a connection
 
-Sometimes a connection may have to be deleted and recreated (see *Server
-administration > Resynchronizing a data source*).  After deleting a connection,
-the replication slot and publication in the source database should be dropped
-using:
+Sometimes a connection may have to be deleted and recreated (see
+*Server administration > Resynchronizing a data source*).  After
+deleting a connection, the replication slot and publication in the
+source database should be dropped using:
 
 ----
 SELECT pg_drop_replication_slot('debezium');
@@ -406,20 +417,22 @@ DROP PUBLICATION dbz_publication;
 
 === Resynchronizing a data source
 
-If a Kafka data stream fails and cannot be resumed, it may be necessary to
-re-stream a complete snapshot of the data to Metadb.  For example, a source
-database may become unsynchronized with the analytic database, requiring a new
-snapshot of the source database to be streamed.  Metadb can accept re-streamed
-data in order to synchronize with the source, using the following procedure.
+If a Kafka data stream fails and cannot be resumed, it may be
+necessary to re-stream a complete snapshot of the data to Metadb.  For
+example, a source database may become unsynchronized with the analytic
+database, requiring a new snapshot of the source database to be
+streamed.  Metadb can accept re-streamed data in order to synchronize
+with the source, using the following procedure.
 
-Note that during the synchronization process, the analytics database continues
-to be available to users.  However, streaming updates will be slower than
-usual, and there temporarily may be missing records (until they are
-re-streamed) or "extra" records (recently deleted in the source database).
-Also, periodic transforms and external SQL are paused during synchronization.
+Note that during the synchronization process, the analytics database
+continues to be available to users.  However, streaming updates will
+be slower than usual, and there temporarily may be missing records
+(until they are re-streamed) or "extra" records (recently deleted in
+the source database).  Also, periodic transforms and external SQL are
+paused during synchronization.
 
-1. Update the `topics` and `consumergroup` configuration settings for the new
-   data stream.
+1. Update the `topics` and `consumergroup` configuration settings for
+   the new data stream.
 +
 [source]
 ----
@@ -429,8 +442,8 @@ ALTER DATA SOURCE sensor OPTIONS
 +
 *Do not restart the Metadb server but continue directly to Step 2.*
 
-2. Stop the Metadb server and (before starting it again) run `metadb sync`.
-   This may take some time to run.
+2. Stop the Metadb server and (before starting it again) run `metadb
+   sync`.  This may take some time to run.
 +
 [source,bash]
 ----
@@ -441,32 +454,33 @@ metadb sync -D data --source sensor
 
 3. Start the Metadb server to begin streaming the data.
 
-4. Once the new data have finished (or nearly finished) re-streaming, stop the
-   Metadb server, and run `metadb endsync` to remove any old data that have not
-   been refreshed by the new data stream.
+4. Once the new data have finished (or nearly finished) re-streaming,
+   stop the Metadb server, and run `metadb endsync` to remove any old
+   data that have not been refreshed by the new data stream.
 +
 [source,bash]
 ----
 metadb endsync -D data --source sensor
 ----
 +
-The timing of when "endsync" should be run is up to the admninistrator, but *it
-must be run to complete the synchronization process*.  In most cases it will be
-more convenient for users if "endsync" is run too late (delaying removal of
-deleted records) rather than too early (removing records before they have been
-restreamed).
+The timing of when "endsync" should be run is up to the
+admninistrator, but *it must be run to complete the synchronization
+process*.  In most cases it will be more convenient for users if
+"endsync" is run too late (delaying removal of deleted records) rather
+than too early (removing records before they have been restreamed).
 +
-Metadb detects when snapshot data are no longer being received, and then writes
-"source snapshot complete (deadline exceeded)" to the log.  This generally
-means it is a good time to run "endsync".
+Metadb detects when snapshot data are no longer being received, and
+then writes "source snapshot complete (deadline exceeded)" to the log.
+This generally means it is a good time to run "endsync".
 +
 [.aqua-background]#Metadb 1.4#
 The snapshot status is also available via the `LIST status` command.
 
 5. Start the server.
 +
-Until a failed stream is re-streamed by following the process above, the
-analytic database may continue to be unsynchronized with the source.
+Until a failed stream is re-streamed by following the process above,
+the analytic database may continue to be unsynchronized with the
+source.
 
 === Creating database users
 
@@ -477,17 +491,18 @@ To create a new database user account:
 CREATE USER wegg WITH PASSWORD 'LZn2DCajcNHpGR3ZXWHD', COMMENT 'Silas Wegg';
 ----
 
-In addition to creating the user, this also creates a schema with the same name
-as the user.  The schema is intended as a workspace for the user.
+In addition to creating the user, this also creates a schema with the
+same name as the user.  The schema is intended as a workspace for the
+user.
 
 .Recommendations:
-* Each user account should be for an individual user and not shared by more
-  than one person.
+* Each user account should be for an individual user and not shared by
+  more than one person.
 * Prefer user names of 3 to 8 characters in length.
 
-By default the user does not have access to data tables.  To give the user
-access to all tables generated from a data source (including tables not yet
-created):
+By default the user does not have access to data tables.  To give the
+user access to all tables generated from a data source (including
+tables not yet created):
 
 [source]
 ----
@@ -503,24 +518,26 @@ effect.
 
 === Administrative database changes
 
-It is possible to make administrative-level changes directly in the underlying
-PostgreSQL database, such as providing additional tables for users.  However,
-the following guidelines should be followed strictly to avoid disrupting the
-operation of Metadb:
+It is possible to make administrative-level changes directly in the
+underlying PostgreSQL database, such as providing additional tables
+for users.  However, the following guidelines should be followed
+strictly to avoid disrupting the operation of Metadb:
 
-1. No changes should be made to any database objects created by Metadb.  If it
-should become necessary to make changes to the database objects at the request
-of the Metadb maintainers, the server should be stopped first to prevent it
-from operating with an out-of-date cache.  If changes are made to the database
-objects inadvertently, the server should be stopped as soon as possible and not
-started until the changes have been reversed.
+1. No changes should be made to any database objects created by
+Metadb.  If it should become necessary to make changes to the database
+objects at the request of the Metadb maintainers, the server should be
+stopped first to prevent it from operating with an out-of-date cache.
+If changes are made to the database objects inadvertently, the server
+should be stopped as soon as possible and not started until the
+changes have been reversed.
 
-2. Changes generally should be made while logged in as a new database user (not
-a superuser) that is created specifically for that purpose.
+2. Changes generally should be made while logged in as a new database
+user (not a superuser) that is created specifically for that purpose.
 
-3. Any new database objects should be created in a new schema that will not
-coincide with a schema that may be created by Metadb.  This can be ensured by
-always setting `addschemaprefix` in data source configurations and avoiding
-names with those prefixes when creating a new schema.
+3. Any new database objects should be created in a new schema that
+will not coincide with a schema that may be created by Metadb.  This
+can be ensured by always setting `addschemaprefix` in data source
+configurations and avoiding names with those prefixes when creating a
+new schema.
 
 4. Database views should not be created in the database.
