--- a/doc/serveradmin.adoc
+++ b/doc/serveradmin.adoc
@@ -2,27 +2,31 @@
 
 === System requirements
 
+These are minimum system requirements.  They are based on the systems
+that Metadb has been tested with recently or is believed to work with.
+
 ==== Hardware requirements
 
-* Metadb software:
+* Metadb:
 ** Architecture: x86-64 (AMD64)
 ** CPU: 2 cores
 ** Memory: 1 GB
 ** Local storage: 500 GB SSD
-* PostgreSQL database:
+* PostgreSQL:
 ** CPU: 4 cores
 ** Memory: 32 GB
 ** Storage: 2 TB SSD
 
 ==== Software requirements
 
-* Operating system: https://www.debian.org[Debian] 12 or later
-* https://www.postgresql.org/[PostgreSQL] 15 or later
-* Required to build from source:
-** https://golang.org/[Go] 1.22 or later
-** goyacc (installation instructions below)
-** https://www.colm.net/open-source/ragel/[Ragel] 6.10 or later
-** https://gcc.gnu.org/[GCC C compiler] 9.3.0 or later
+* Operating system: https://www.debian.org/[Debian] Linux
+* Database system: https://www.postgresql.org/[PostgreSQL] 15 or later
+* To build from source:
+** https://go.dev/[Go] 1.23
+** https://pkg.go.dev/golang.org/x/tools/cmd/goyacc[goyacc] (see installation instructions below)
+** https://www.colm.net/open-source/ragel/[Ragel] 6
+** https://gcc.gnu.org/[GCC C compiler] 9 or later
+** https://www.gnu.org/software/bash/[bash]
 
 ==== PostgreSQL configuration
 
@@ -69,10 +73,10 @@ Then to build the server:
 
 [source,bash]
 ----
-./build.sh
+./build
 ----
 
-The `build.sh` script creates a `bin/` subdirectory and builds the
+The `build` script creates a `bin/` subdirectory and builds the
 `metadb` executable there:
 
 [source,bash]
